# translator-openpredict

./: .dockerignore  .dvcignore  .env  .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  TESTING.md  _config.yml  data.dvc  deploy.sh  devfile.yml  doap-project.ttl  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  generate_drug_repurposing_files.sh  index.html  installkgpredict.sh  mkdocs.yml  objects.inv  openapi.yml  openshift-template.yml  prepare_virtuoso_dsri.sh  prepare_virtuoso_ldp.sh  pyproject.toml  requirements-dev.txt  requirements.txt  reset.sh  reset_models.sh  (+7 more)
.dvc/: config
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: deployment_issue.md  embedding-request.md  query_issue.md
.github/workflows/: build-package-conda.yml  codeql-analysis.yml  conda-package.yml  publish-docker.yml  publish-package.yml  run-tests-prod.yml  run-tests-spark.yml  run-tests.yml  scan-code.yml  security-scan-docker.yml  security-scan-website.yml  test-dev.yml  test-integration.yml  test-package.yml  test-prod.yml  test-trapi.yml
assets/css/: style.scss
data/: initial-openpredict-metadata.ttl  openpredict-metadata.ttl
data/models/: drug_disease_model.joblib
docs/: README-pydoc.md  README.md  docker-compose.yml  index.md  neurodkg.ttl  openpredict-examples.ipynb  openpredict-pyrdf2vec-embeddings.ipynb  query-ars.ipynb  requirements.txt  run_function.py
docs/contribute/: CONTRIBUTE.md  README.md
docs/dev/: README.md
docs/embeddings/: omim_gloveembeddings.json
docs/getting-started/: create-model.md  create-project.md  deploy-api.md
docs/openpredict-api/: introduction.md  use.md
docs/rdf2vec/: _rdf2vec.py  converters.py  graph.py
docs/reference/: trapi.md
docs/remote-development/: devfile-che.yml  devfile.yaml  openshift-template.yml
drugrepositioningfilesmodels/: drugrepositioningpredict.py  relation_embeddings.npy  relations.tsv
getting-started/create-model/: index.html
getting-started/create-project/: index.html
getting-started/deploy-api/: index.html
getting-started/development/: index.html
models/: openpredict_baseline.dvc  openpredict_baseline.json  openpredict_baseline.mlem  openpredict_baseline.ttl
notebook/: EvidencePath.ipynb  Explanation.ipynb
openpredict/: __main__.py  app.py  build_models.py  build_utils.py  compute_similarities.py  config.py  evidence_path.py  feature_generation.py  generateDiseaseFeatures.py  loaded_models.py  main.py  openapi-11.yml  openapi.py  openapi.yml  openpredict_api.py  openpredict_model.py  openpredict_model_omim_drugbank.py  openpredict_omim_drugbank.py  openpredict_utils.py  predict_model_omim_drugbank.py  predict_utils.py  rdf_utils.py  reasonerapi_parser.py  reasonerapi_utils.py  train_utils.py  trapi_parser.py  utils.py
openpredict-api/deploy/: index.html
openpredict-api/introduction/: index.html
openpredict-api/use/: index.html
openpredict/api/: explain.py  models.py  predict.py  trapi.py
openpredict/data/: openpredict-metadata.ttl
openpredict/ml_models/: evidence_path_model.py
openpredict/models/: drugrepurposing.py  evidence_path.py  explain.py  explain_shap.py  openpredict_model.py
predict-drug-disease/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
predict-drug-target/: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  deploy.sh  docker-compose.yml  get_bio2rdf_data.sh  prepare.sh  pyproject.toml  requirements.txt
predict-drug-target/.github/workflows/: test.yml
predict-drug-target/archive/: dt_predict.py  ml.py  old_train.py  prepare.py  prepareOpenTargets.py  prepare_opentargets.py
predict-drug-target/notebooks/: calc_similarities.ipynb  drug_conversion.ipynb  get_similarities.ipynb  query-translator.ipynb
predict-drug-target/scripts/: download_opentargets.sh  getDrugCentral.sh  getOpenTargets.py
predict-drug-target/src/predict_drug_target/: __init__.py  __main__.py  api.py  embeddings.py  predict.py  prepare.py  train.py  utils.py  vectordb.py
predict-drug-target/tests/: test_trapi.py
predict-drug-target/vectordb/: deploy.sh  docker-compose.yml
rdf2vec/: _rdf2vec.py
rdf2vec/walkers/: anonymous.py  (+4 more)
resources/: api.sh  openpredict-examples.ipynb  openpredict-pyrdf2vec-embeddings.ipynb  openshift-template.yml  query-ars.ipynb  run.sh
results/: results_disjoint_lr.nq
scripts/: run.sh  test.sh
search/: search_index.json
tests/: conftest.py  run_function.py  test_build_models.py  test_compute_similarities.py  test_openpredict_api.py  test_train_model.py
trapi-openpredict/: README.md  pyproject.toml  requirements.txt
trapi-openpredict/src/trapi_openpredict/: main.py
trapi-openpredict/src/trapi_openpredict/predict_drug_disease/: api.py  predict.py  utils.py
trapi-openpredict/src/trapi_openpredict/predict_drug_disease/evidence_path/: predict.py  train.py
trapi-openpredict/tests/queries/: trapi_disease_limit3.json  trapi_diseasemondo_limitno.json  trapi_diseasemulti_limitno.json  trapi_diseasetreatedby_limitno.json  trapi_drug_limitno.json  trapi_drug_min_score.json  trapi_ids_limit1.json  trapi_similarity_disease_mondo_limitno.json
trapi-predict-kit/: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
trapi-predict-kit/.github/workflows/: publish.yml  test.yml
trapi-predict-kit/docs/: index.md  query-ars.ipynb
trapi-predict-kit/docs/getting-started/: create-project.md  expose-model.md  save-model.md
trapi-predict-kit/docs/openpredict-api/: deploy.md  introduction.md
trapi-predict-kit/docs/reference/: trapi.md
trapi-predict-kit/src/trapi_predict_kit/: __init__.py  config.py  decorators.py  save.py  trapi.py  trapi_parser.py  types.py  utils.py
trapi-predict-kit/tests/: __init__.py  conftest.py  dev.py  test_save.py  test_trapi.py  test_utils.py
xpredictframework/: deepdrug_repurposingpredictiondataset.csv  testexplanation.py  xpredict.py
(+137 files in other folders)
