[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.8,<3.11"
name = "openpredict"
description = "A package to help serve predictions of biomedical concepts associations as Translator Reasoner API."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Remzi Çelebi", email = "r.celebi@maastrichtuniversity.nl" },
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
    { name = "Arif Yilmaz" },
    { name = "Elif" },
]
keywords = [
    "Python",
    "Biomedical Data Translator",
    "TRAPI",
    "Predictions"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dynamic = ["version"]

dependencies = [
    "requests >=2.23.0",
    "pydantic >=1.9",
    "fastapi >=0.68.1",
    "rdflib >=6.1.1",
    "SPARQLWrapper >=2.0.0,<3.0.0",
    # "mlem",
    "mlem==0.3.2",
    "reasoner-pydantic ==3.0.1",
    # "fairworkflows",
    # "fairworkflows@git+https://github.com/vemonet/fairworkflows.git",
    # "yatiml >=0.10.0",
]

[project.optional-dependencies]
train = [
    "numpy ==1.16.1", # requires python 3.8
    "pandas ==1.1.1",
    "torch==1.13.1",
    "networkx",
    "gensim ==3.8.3",
    "scipy ==1.5.4",
    # scipy==0.19.1
    ## Cannot update to numpy1.16.5 because it requires werkzeug>=2.0
    # numpy==1.16.5
    # werkzeug>=2.0
    "cython==0.29.32",
    "pyspark ==3.1.1",
    # "findspark",
    "scikit-learn ==0.23.1",
    "shap==0.41.0",
    "matplotlib==3.4.3",
    "pyRDF2vec==0.0.5",
    "python-multipart >=0.0.5",
    # "httpx >=0.21.1",
]
test = [
    "pytest >=7.1.3,<8.0.0",
    "pytest-cov >=2.12.0,<4.0.0",
    "reasoner-validator >=3.1.4",
    "httpx",
]
dev = [
    "typer==0.7.0",
    "pre-commit >=2.17.0,<3.0.0",
    "autoflake >=1.4.0,<2.0.0",
    # "uvicorn >=0.15.0",
    # "gunicorn >=20.0.4",
    "dvc==2.38.1",
    # "dagshub",
    "isort >=5.0.6,<6.0.0",
    "flake8 >=3.8.3,<6.0.0",
    "Flake8-pyproject>=1.1.0.post0",
    "flaky",
    "types-requests",
    # "jupyter",
    # "notebook",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openpredict"]

# [project.scripts]
# openpredict = "openpredict.__main__:main"


# HATCH CONFIG: ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
# type = "container"
# image = "ghcr.io/maastrichtu-ids/openpredict-api:0.1.0"
# command = ["/bin/sleep", "infinity"]
# start-on-creation = false
features = [
    "test",
    "dev",
    # "train",
]
post-install-commands = [
    "pre-commit install",
    "dvc pull"
]

[tool.hatch.envs.default.scripts]
fmt = [
    # "ruff src tests --fix",
    "isort src tests",
    "autoflake --remove-all-unused-imports --recursive --remove-unused-variables --in-place src tests --exclude=__init__.py",
    "pre-commit run --all-files || true",
]
check = [
    # "ruff src tests",
    "isort --check-only --diff .",
    "flake8 .",
]
fix-permission = "sudo chown -R $(id -u):$(id -g) models data"
# train = "python src/openpredict_model/train.py train-model"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/openpredict/__init__.py"


# OTHER TOOLS

[tool.isort]
line_length = 120


[tool.coverage.run]
source = ["src/openpredict"]
branch = true
[tool.coverage.report]
omit = ["tests/*"]


[tool.flake8]
max-complexity = 17
max-line-length = 120
per-file-ignores = [
    "__init__.py:F401",
]
ignore = [
    "E501", # line too long
    "E303", # too many blank lines
    "E301", # expected 1 blank lines found 0
    "W503", # line break before binary operator
]


[tool.ruff]
target-version = "py37"
line-length = 120
select = [
    "A",
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    # "FBT", # flake8-boolean-trap
    # "I",  # isort
    "ICN",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",  # pycodestyle warnings
    "YTT",
]

ignore = [
    "Q000", # no single quotes
    "N806", "N802", "N803", # lowercase variables
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B006", # do not use mutable data structures for argument defaults
    "C901", # too complex
    "S101", # Use of `assert` detected
    "T201", "T203", # remove print and pprint
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]



[project.urls]
Homepage = "https://github.com/MaastrichtU-IDS/translator-openpredict"
Documentation = "https://github.com/MaastrichtU-IDS/translator-openpredict"
History = "https://github.com/MaastrichtU-IDS/translator-openpredict/releases"
Tracker = "https://github.com/MaastrichtU-IDS/translator-openpredict/issues"
Source = "https://github.com/MaastrichtU-IDS/translator-openpredict"
