[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.10"
version = "0.0.1"
name = "predict-drug-target"
description = "This project uses ESM2 protein embeddings and MolecularTransformer drug embeddings to train a linear classifier to predict potential drug-targets interactions."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Michel Dumontier", email = "michel.dumontier@gmail.com" },
]
maintainers = [
    { name = "Michel Dumontier", email = "michel.dumontier@gmail.com" },
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
keywords = [
    "Python",
    "Classifier",
    "Embeddings",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "trapi-predict-kit[web]",
    "MolecularTransformerEmbeddings @ git+https://github.com/vemonet/MolecularTransformerEmbeddings.git",
    "fair-esm", # requires torch
    "requests",
    "qdrant-client",
    "typer",
    "PubChemPy",
    # "linkml-runtime ==1.6.0",  # NOTE: bug in 1.6.1
]

[project.optional-dependencies]
train = [
    "bio",
    "scipy",
    "torch",
    "matplotlib",
    "scikit-learn",
    "xgboost",
    "numpy",
]
test = [
    "pytest >=7.1.3",
    "pytest-cov >=3.0.0",
    "coverage",
    "mypy >=0.991",
    "ruff",
    "black",
    "ipykernel",
    "pip-tools",
    "reasoner_validator",
    "types-requests",
]

[project.scripts]
predict-dt = "src.predict_drug_target.__main__:cli"


[project.urls]
Homepage = "https://github.com/MaastrichtU-IDS/predict-drug-target"
Documentation = "https://github.com/MaastrichtU-IDS/predict-drug-target"
History = "https://github.com/MaastrichtU-IDS/predict-drug-target/releases"
Tracker = "https://github.com/MaastrichtU-IDS/predict-drug-target/issues"
Source = "https://github.com/MaastrichtU-IDS/predict-drug-target"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
    "train",
]

[tool.hatch.envs.default.scripts]
train = "python3 src/predict_drug_target/train.py {args}"
predict = "python3 src/predict_drug_target/predict.py {args}"
api = "uvicorn src.predict_drug_target.api:app --host 0.0.0.0 --reload {args}"
fmt = [
    "black src/",
    "ruff src/ --fix",
]
test = [
    # "fmt",
    "pytest {args}",
    # "mypy",
]
cov = [
    "fmt",
    "pytest --cov-report html {args}",
    "python -c 'import webbrowser; webbrowser.open(\"http://0.0.0.0:3000\")'",
    "python -m http.server 3000 --directory ./htmlcov",
]
requirements = "pip-compile -o requirements.txt pyproject.toml"

# TOOLS
[tool.hatch.build.targets.wheel]
packages = ["src/predict_drug_target"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.mypy]
files = ["src/"]
strict = false
implicit_reexport = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_generics = false


[tool.pytest.ini_options]
addopts = [
    "-vvv",
    # "--cov=src",
    # "--color=yes",
    # "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*:"
]


[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = false


# https://github.com/charliermarsh/ruff#supported-rules
[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
line-length = 120
select = [
    "I",     # isort
    "N",     # pep8-naming
    "S",     # bandit
    "A",     # flake8-builtins
    "YTT",   # flake8-2020
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
    "ICN",   # flake8-import-conventions
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "Q",     # flake8-quotes
    # "FBT",   # flake8-boolean-trap
    "F",     # pyflakes
    "UP",    # pyupgrade
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "PLC",   # pylint convention
    "PLE",   # pylint error
    # "PLR",   # pylint refactor Magic value used in comparison, consider replacing 400 with a constant variable
    "PLW",   # pylint warning
    "RUF",   # ruff specific
    "T",
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B006", # do not use mutable data structures for argument defaults
    "C901", # too complex
    "S101", # Use of `assert` detected
    "S301", # `pickle` and modules that wrap it can be unsafe
    "T201", "T203", # remove print and pprint
    "S105", # Potential password
    "PLR0913", "PLR0912", "PLR0915", # Too many branches/statements/arguments to function call
    "A002", "A003", # Argument/Class attribute `type` is shadowing a Python builtin
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"] # module imported but unused
