[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.9"
name = "trapi-openpredict"
description = "A package to help serve predictions of biomedical concepts associations as Translator Reasoner API."
readme = "README.md"
license = { file = "../LICENSE.txt" }
authors = [
    { name = "Remzi Çelebi", email = "r.celebi@maastrichtuniversity.nl" },
    { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
    { name = "Arif Yilmaz" },
    { name = "Elif" },
]
keywords = [
    "Python",
    "Biomedical Data Translator",
    "TRAPI",
    "Predictions"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "gensim", # For word2vec

    "requests",
    "reasoner-pydantic >=4.1.4",
    "rdflib >=6.1.1",
    "SPARQLWrapper",
    # "SPARQLWrapper >=2.0.0,<3.0.0",

    "trapi-predict-kit[web,opentelemetry]",
    # "trapi-predict-kit[web,opentelemetry] @ {root:uri}/../trapi-predict-kit",
    # "predict-drug-target @ {root:uri}/../predict-drug-target",
    "predict-drug-target", # From workspace
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "reasoner-validator >=3.9.0",
    "httpx",
    "typer >=0.7.0",
    "pre-commit >=3.2.0",
    "dvc >=2.38.1",
    "pip-tools",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/MaastrichtU-IDS/translator-openpredict"
Documentation = "https://github.com/MaastrichtU-IDS/translator-openpredict"
History = "https://github.com/MaastrichtU-IDS/translator-openpredict/releases"
Tracker = "https://github.com/MaastrichtU-IDS/translator-openpredict/issues"
Source = "https://github.com/MaastrichtU-IDS/translator-openpredict"



# HATCH CONFIG: ENVS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
]
# Automatically pull data required for predict-drug-disease model from DagsHub using dvc
post-install-commands = [
    "cd ..",
    # "pre-commit install",
    "dvc pull"
]

[tool.hatch.envs.default.scripts]
dev = "uvicorn src.trapi_openpredict.main:app --reload --log-level debug"
fmt = "pre-commit run --all --all-files"
test-dev = "pytest tests/production {args}"
test-ci = "pytest tests/production --server https://openpredict.ci.transltr.io {args}"
test-prod = "pytest tests/production --server https://openpredict.transltr.io {args}"
fix-permission = "sudo chown -R $(id -u):$(id -g) ../models ../data"
compile = "pip-compile -o requirements.txt pyproject.toml"

[tool.rye.scripts]
dev = "uvicorn src.trapi_openpredict.main:app --reload --log-level debug"
# devserver-explicit = { cmd = "flask run --app ./hello.py --debug" }

# TOOLS
[tool.hatch.build.targets.wheel]
packages = ["src/trapi_openpredict"]

[tool.hatch.version]
path = "src/trapi_openpredict/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true


[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--cov=src",
    "--color=yes",
    "--cov-report=term-missing",
]


[tool.ruff]
src = ["src", "tests"]
target-version = "py39"
line-length = 120
select = [
    "A",
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    # "FBT", # flake8-boolean-trap
    "I",  # isort
    "ICN",
    "N",
    "PLC",
    "PLE",
    # "PLR", # Magic value used in comparison, consider replacing the str with a constant variable
    "PLW",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",  # pycodestyle warnings
    "YTT",
]

ignore = [
    "Q000", # no single quotes
    "N806", "N802", "N803", # lowercase variables
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B006", # do not use mutable data structures for argument defaults
    "C901", # too complex
    "S101", # Use of `assert` detected
    "T201", "T203", # remove print and pprint
    "A003", # Class attribute `type` is shadowing a python builtin
    "SIM118", # dont use .keys()
]

[tool.ruff.per-file-ignores]
"__init__.py" = [ "I", "F401" ]

[tool.ruff.isort]
known-third-party = ["trapi_predict_kit", "predict_drug_target"]
